--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./infiniteTile.css" >
+    <link rel="stylesheet" href="./src/infiniteTile.css" >
 </head>
 <body>
 
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-<script src="./infiniteTile.ts" ></script>
+<script src="./src/infiniteTile.ts" ></script>
 
 </body>
 <style>
